<resources>
    <string name="app_name">MasterSleep</string>
    <string name="hint_title">title</string>
    <string name="content_description_add">add</string>
    <string name="content_description_delete">delete</string>
    <string name="item_navigation_diary">Diary</string>
    <string name="item_navigation_clock">clock</string>
    <string name="now">Now</string>
    <string name="alarm">Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="cancel_button">Cancel</string>
    <string name="start_alarm">Start Alarm</string>
    <string name="rationale_dialog_post_notification">This app require post notification permission
        for alarm clock operation .</string>
    <string name="rationale_dialog_activity_recognition">This app require activity recognition
        permission to track your sleep.</string>
    <string name="denial_dialog_post_notification">This feature is unavailable because it requires
        post notification permission.\nPlease allow post notification permission from settings to
        proceed further</string>
    <string name="denial_dialog_activity_recognition">This feature is unavailable because it
        requires activity recognition permission.\nPlease allow activity recognition permission from
        settings to proceed further</string>
    <string name="permission_required">Permission required!</string>
    <string name="unknown_permission">Unknown permission: %1$s</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="default_item">Default</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="statistic">Statistic</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="sleep">Sleep</string>
    <string name="select_dates">Select dates</string>
    <string name="alarm_trigger">Alarm will be triggered at %1$s</string>
    <string name="sleep_track">The app is currently tracking your sleep.\nPlease, don\'t turn off the app.</string>
    <string name="wake_up">Wake up!</string>
    <string name="postpone">Postpone for 5 minutes</string>
    <string name="stop">Stop</string>
    <string name="select_ringtone">Select ringtone</string>
    <string name="ringtone">Ringtone</string>
    <string name="word">Word</string>
    <string name="frequency">Frequency</string>
    <string name="nothing_found">Nothing found.\nTry searching in a different date range.</string>
    <string name="daily_diary_use_streak">Daily Diary Use Streak</string>
    <string name="daily_wake_up_streak">Daily Wake-Up Streak</string>
    <string name="current_streak">Current streak: %1$d</string>
    <string name="current_max_streak">Max streak: %1$d</string>
    <string name="daily">Daily</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_dialog_text">Are you sure you want to delete this note?\nPlease confirm.</string>
    <string name="delete">Delete</string>
    <string name="duration">Duration</string>
    <string name="time_to_fall_asleep">Time To Fall Asleep</string>
    <string name="wake_up_time">Wake Up Time</string>
    <string name="time_when_fall_asleep">Time When Fall Asleep</string>

</resources>