<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_diary"
        android:icon="@drawable/ic_diary"
        android:title="@string/item_navigation_diary" />
    <item
        android:id="@+id/action_clock"
        android:icon="@drawable/baseline_access_time_24"
        android:title="@string/item_navigation_clock" />
    <item
        android:id="@+id/action_statistic"
        android:icon="@drawable/baseline_analytics_24"
        android:title="@string/statistic" />
    <item
        android:id="@+id/action_streaks"
        android:icon="@drawable/trophy_24"
        android:title="@string/daily" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />
</menu>